<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <View
                android:id="@+id/topAccentView"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/colorAccent" />

            <ImageView
                android:id="@+id/pageIconImageView"
                android:layout_width="90dp"
                android:layout_height="110dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:paddingBottom="20dp"
                android:src="@drawable/rounded_observations_icon" />

            <com.patientcard.views.customviews.TitilliumLightTextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/topAccentView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/pageIconImageView"
                android:textColor="@android:color/white"
                android:textSize="21sp" />

            <com.patientcard.views.customviews.TitilliumLightTextView
                android:id="@+id/pageTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/topAccentView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/pageIconImageView"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.patientcard.views.customviews.TitilliumSemiBoldTextView
                    android:id="@+id/observationDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/deleteImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/delete_icon"
                    android:visibility="gone" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_frame_white_with_grey_border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <com.patientcard.views.customviews.TitilliumLightTextView
                        android:id="@+id/personLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/person"
                        android:textColor="@color/colorPrimaryGrey"
                        android:textSize="16sp" />

                    <com.patientcard.views.customviews.TitilliumLightEditText
                        android:id="@+id/personValueEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:paddingBottom="8dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="-16dp"
                    android:background="@color/colorPrimaryGrey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <com.patientcard.views.customviews.TitilliumLightTextView
                        android:id="@+id/observationLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/note"
                        android:textColor="@color/colorPrimaryGrey"
                        android:textSize="16sp" />

                    <com.patientcard.views.customviews.TitilliumLightEditText
                        android:id="@+id/drugEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@android:color/white"
                        android:gravity="top"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLines="10"
                        android:layout_below="@+id/observationLabelTextView"
                        android:minLines="5"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/microphoneImageView"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/microphone_not_working_icon" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/dialog_delete"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/checkFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="22dp"
        android:visibility="visible"
        app:elevation="0dp"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorPrimary"
        app:fab_addButtonPlusIconColor="@android:color/white"
        app:srcCompat="@drawable/check_icon" />

</RelativeLayout>

