...
            android:paddingTop="10dp"
            android:text="@string/enter_patient_qr_code"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <com.patientcard.views.customviews.TitilliumLightEditText
            android:id="@+id/qrCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:inputType="number"
            android:maxLines="1"
...
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textSize="22sp" />

        <FrameLayout
            android:id="@+id/openButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_frame_accent_with_grey_border"
            android:clickable="true"
            android:focusable="true"
...
