...
            android:textColor="@android:color/black"
            android:textSize="19sp" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/observationsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-15dp"
        android:layout_below="@id/headerRelativeLayout"/>

    <LinearLayout
...
            android:textColor="@color/colorPrimaryGrey"
            android:textSize="22sp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="22dp"
...
