...
    <string name="fever_card">KARTA GORĄCZKOWA</string>
    <string name="add_examination">DODAJ BADANIE</string>
    <string name="examination">Badanie</string>
    <string name="recommendation_card">KARTA ZLECEŃ LEKARSKICH</string>
    <string name="add_recommendation">DODAJ ZLECENIE LEKARSKIE</string>
    <string name="observation_card">KARTA CIĄGŁEJ OBSERWACJI</string>
    <string name="add_observation">DODAJ OBSERWACJE</string>
    <string name="new_fever_card">Nowe badanie</string>
    <string name="more">WIĘCEJ</string>
    <string name="graph">WYKRES</string>
    <string name="add">DODAJ</string>
    <string name="date">data</string>
    <string name="pulse">tętno</string>
...
    <string name="note">Notatka:</string>
    <string name="long_text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim…</string>
    <string name="sth_wrong_check_internet_connection">Coś poszło nie tak. Sprawdź połączenie internetowe.</string>
    <string name="authorization_error">Problem autoryzacji. Zaloguj się ponownie.</string>
    <string name="enter_patient_qr_code">Wpisz QR Code pacjenta</string>
    <string name="open">OTWÓRZ</string>
    <string name="observation">Obserwacja</string>
    <string name="fill_data">Wypełnij pole</string>
    <string name="fill_data_with_dots">Wypełnij pole...</string>
    <string name="time_placeholder">--:--</string>
    <string name="set_hour">Wybierz godzine</string>
    <string name="set_date">Wybierz date</string>
    <string name="set">USTAW</string>
...
